# python-project-83

./: .env.example  .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  setup.cfg
page_analyzer/: __init__.py  app.py  db.py  utils.py
page_analyzer/templates/: __init__.py  base.html  index.html  url.html  url_details.html  urls.html
